prevent dark mode

--- a/jupypod/src/App.css
+++ b/jupypod/src/App.css
@@ -1,4 +1,4 @@
-.react-flow-container {
-  height: 100vh;
-  width: 100vw
+.App {
+  background: white;
+  color: black;
 }
